--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,17 +40,17 @@ actix-web = { version = "4.11.0", default-features = false, features = [
     "compress-gzip",
     "macros",
 ] }
-actix-rt = "2.11.0"
+actix-rt = "2.10.0"
 ahash = "0.8.12"
-anyhow = "1.0.99"
+anyhow = "1.0.98"
 async-recursion = "1.1.1"
-async-trait = "0.1.89"
+async-trait = "0.1.88"
 axum-otel-metrics = "0.10.0"
 axum = "0.8.4"
 backoff = { version = "0.4.0", features = ["tokio"] }
-backon = "1.5.2"
-candid = "0.10.18"
-chrono = { version = "0.4.42", features = ["serde"] }
+backon = "1.5.1"
+candid = "0.10.14"
+chrono = { version = "0.4.41", features = ["serde"] }
 clap-num = "1.2"
 clap = { version = "4.5", features = [
     "derive",
@@ -64,9 +64,9 @@ clap = { version = "4.5", features = [
     "string",
     "cargo",
 ] }
-clap_complete = "4.5.57"
+clap_complete = "4.5.54"
 colored = "2.2.0"
-comfy-table = "7.2.0"
+comfy-table = "7.1.4"
 assert_cmd = "2.0.17"
 crossbeam = "0.8.4"
 crossbeam-channel = "0.5.15"
@@ -96,60 +96,60 @@ self_update = { version = "0.41.0", default-features = false, features = [
     "archive-tar",
     "rustls",
 ] }
-ic-base-types = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-canister-client = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-canister-client-sender = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
+ic-base-types = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-canister-client = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-canister-client-sender = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
 ic-canisters = { path = "rs/ic-canisters" }
-ic-http-types = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-config = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-crypto-utils-threshold-sig-der = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-dummy-getrandom-for-wasm = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-http-endpoints-metrics = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-interfaces-registry = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
+ic-http-types = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-config = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-crypto-utils-threshold-sig-der = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-dummy-getrandom-for-wasm = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-http-endpoints-metrics = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-interfaces-registry = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
 ic-management-backend = { path = "rs/ic-management-backend" }
-ic-management-canister-types-private = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
+ic-management-canister-types-private = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
 ic-management-types = { path = "rs/ic-management-types" }
-ic-metrics = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-nervous-system-canisters = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-nervous-system-common = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-nervous-system-runtime = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-nns-common = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-nns-constants = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-nns-governance = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-nns-governance-api = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-protobuf = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-registry-canister-client = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-registry-client = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-registry-client-fake = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-registry-client-helpers = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-registry-common-proto = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-registry-keys = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-registry-local-registry = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-registry-local-store = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-registry-local-store-artifacts = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-registry-nns-data-provider = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-registry-subnet-type = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-registry-transport = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-sys = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-types = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-nervous-system-root = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-nervous-system-clients = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-sns-wasm = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-cycles-minting-canister = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-icrc1-test-utils = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-rosetta-core = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-icp-ledger = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-icrc-ledger-types = { git = "https://github.com/dfinity/ic.git",rev = "ebed5d4228b71477738316ae3d5274672eae369e"  }
+ic-metrics = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-nervous-system-canisters = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-nervous-system-common = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-nervous-system-runtime = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-nns-common = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-nns-constants = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-nns-governance = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-nns-governance-api = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-protobuf = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-registry-canister-client = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-registry-client = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-registry-client-fake = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-registry-client-helpers = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-registry-common-proto = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-registry-keys = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-registry-local-registry = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-registry-local-store = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-registry-local-store-artifacts = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-registry-nns-data-provider = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-registry-subnet-type = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-registry-transport = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-sys = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-types = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-nervous-system-root = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-nervous-system-clients = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-sns-wasm = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+cycles-minting-canister = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+ic-icrc1-test-utils = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+rosetta-core = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+icp-ledger = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
+icrc-ledger-types = { git = "https://github.com/dfinity/ic.git",rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9"  }
 ic-metrics-encoder = "1.1.1"
 ic-transport-types = "0.39.3"
 ic-utils = "0.39.3"
 itertools = "0.13.0"
-keyring = { version = "3.6.3", features = [
+keyring = { version = "3.6.2", features = [
     "apple-native",
     "sync-secret-service",
 ] }
 lazy_static = "1.5.0"
-log = "0.4.28"
+log = "0.4.27"
 lru = "0.12.5"
 num-traits = "0.2"
 opentelemetry = { version = "0.28", features = ["metrics"] }
@@ -162,10 +162,10 @@ prometheus-http-query = { version = "0.8.3", default-features = false, features 
 ] }
 prometheus = { version = "0.13.4", features = ["process"] }
 prost = "0.13"
-rand = { version = "0.9.2", features = ["std_rng"] }
+rand = { version = "0.9.1", features = ["std_rng"] }
 rand_seeder = "0.3.0"
-regex = "1.11.2"
-registry-canister = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
+regex = "1.11.1"
+registry-canister = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
 reqwest = { version = "0.12", default-features = false, features = [
     "rustls-tls-webpki-roots",
     "blocking",
@@ -175,7 +175,7 @@ rstest = { version = "0.23.0", default-features = false }
 rust_decimal = "1.37.2"
 rust_decimal_macros = "1.37.1"
 serde = { version = "1.0", features = ["derive"] }
-serde_json = { version = "1.0.143", default-features = false, features = [
+serde_json = { version = "1.0.140", default-features = false, features = [
     "preserve_order",
 ] }
 serde_yaml = "0.9.34"
@@ -183,7 +183,7 @@ shlex = "1.3.0"
 sha2 = "0.10.9"
 simple_asn1 = "0.6.3"
 slog-async = { version = "2.8.0", features = ["nested-values"] }
-slog-term = "2.9.2"
+slog-term = "2.9.1"
 slog = { version = "2.7.0", features = [
     "max_level_trace",
     "nested-values",
@@ -195,26 +195,26 @@ strum = { version = "0.26.3", features = ["derive"] }
 strum_macros = "0.26.4"
 tabled = "0.18.0"
 tabular = "0.2"
-tempfile = "3.22.0"
-thiserror = "2.0.16"
-tokio = { version = "1.47.1", features = ["full"] }
-tokio-util = "0.7.16"
-url = "2.5.7"
-wiremock = "=0.6.4"
+tempfile = "3.20.0"
+thiserror = "2.0.12"
+tokio = { version = "1.46.1", features = ["full"] }
+tokio-util = "0.7.15"
+url = "2.5.4"
+wiremock = "0.6.4"
 human_bytes = "0.4"
 mockall = "0.13.1"
 
 # dre-canisters dependencies
-ic-cdk = { version = "^0.18.7" }
-ic-cdk-timers = { version = "^0.12.2" }
-ic-cdk-macros = { version = "^0.18.7" }
+ic-cdk = { version = "^0.17.2" }
+ic-cdk-timers = { version = "^0.11.0" }
+ic-cdk-macros = { version = "^0.17.2" }
 ic-stable-structures = "0.6.9"
-dfn_core = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
+dfn_core = { git = "https://github.com/dfinity/ic.git", rev = "2f87fe95207dc6371a2f2dc273362ba03b41e0e9" }
 rewards-calculation = { path = "rs/dre-canisters/node-provider-rewards/rewards-calculation" }
 node-provider-rewards-api = { path = "rs/dre-canisters/node-provider-rewards/canister/api" }
 
 # dre-airflow deps, should be replaced with dre-airflow once
-indexmap = { version = "2.11.1", features = ["serde"] }
+indexmap = { version = "2.10.0", features = ["serde"] }
 
 [profile.release]
 # Add debug information to the release build (does NOT reduce the level of optimization!)
