--- a/rs/dre-canisters/node-provider-rewards/rewards-calculation/Cargo.toml
+++ b/rs/dre-canisters/node-provider-rewards/rewards-calculation/Cargo.toml
@@ -8,14 +8,13 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
+ic-cdk = { workspace = true }
 ic-types = { workspace = true }
 ic-base-types = { workspace = true }
 itertools = { workspace = true }
 rust_decimal = { workspace = true }
 rust_decimal_macros = { workspace = true }
 ic-protobuf = { workspace = true }
-ic-cdk = { version = "^0.17.2" }
-candid = { workspace = true }
 
 [dev-dependencies]
 chrono = { version = "0.4.41", default-features = false, features = [
