--- a/rs/ic-canisters/Cargo.toml
+++ b/rs/ic-canisters/Cargo.toml
@@ -40,3 +40,5 @@ ic-types.workspace = true
 ic-interfaces-registry.workspace = true
 ic-registry-nns-data-provider.workspace = true
 icrc-ledger-types.workspace = true
+ic-node-rewards-canister-api = { workspace = true }
+rewards-calculation = { workspace = true }
