--- a/Cargo.toml
+++ b/Cargo.toml
@@ -134,7 +134,6 @@ ic-sys = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738
 ic-types = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
 ic-nervous-system-root = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
 ic-nervous-system-clients = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-ic-nervous-system-proto = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
 ic-sns-wasm = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
 cycles-minting-canister = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
 ic-icrc1-test-utils = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
@@ -204,7 +203,6 @@ url = "2.5.7"
 wiremock = "=0.6.4"
 human_bytes = "0.4"
 mockall = "0.13.1"
-csv = "1.3.1"
 
 # dre-canisters dependencies
 ic-cdk = { version = "^0.18.7" }
@@ -212,9 +210,8 @@ ic-cdk-timers = { version = "^0.12.2" }
 ic-cdk-macros = { version = "^0.18.7" }
 ic-stable-structures = "0.6.9"
 dfn_core = { git = "https://github.com/dfinity/ic.git", rev = "ebed5d4228b71477738316ae3d5274672eae369e" }
-rewards-calculation = { git = "https://github.com/dfinity/ic.git", rev = "3b97cf8afda6ab6ff3dad3eac21733ab54b77586" }
+rewards-calculation = { path = "rs/dre-canisters/node-provider-rewards/rewards-calculation" }
 node-provider-rewards-api = { path = "rs/dre-canisters/node-provider-rewards/canister/api" }
-ic-node-rewards-canister-api = { git = "https://github.com/dfinity/ic.git", rev = "3b97cf8afda6ab6ff3dad3eac21733ab54b77586" }
 
 # dre-airflow deps, should be replaced with dre-airflow once
 indexmap = { version = "2.11.1", features = ["serde"] }
