--- a/Cargo.toml
+++ b/Cargo.toml
@@ -195,6 +195,7 @@ spinners = "4.1.1"
 strum = { version = "0.26.3", features = ["derive"] }
 strum_macros = "0.26.4"
 tabled = "0.18.0"
+csv_to_table = "0.3"
 tabular = "0.2"
 tempfile = "3.22.0"
 thiserror = "2.0.16"
