--- a/rs/cli/Cargo.toml
+++ b/rs/cli/Cargo.toml
@@ -27,6 +27,7 @@ colored = { workspace = true }
 comfy-table = { workspace = true }
 cycles-minting-canister = { workspace = true }
 csv = { workspace = true }
+csv_to_table = { workspace = true }
 decentralization = { workspace = true }
 dialoguer = { workspace = true }
 dirs = { workspace = true }
