--- a/release-index.yaml
+++ b/release-index.yaml
@@ -8,6 +8,10 @@
 #         rc_name: <reference RC name>
 #         name: <version name>
 releases:
+  - rc_name: rc--2025-09-25_09-52
+    versions:
+      - name: base
+        version: 206b61a8616bc93d36d6a014e5cc8edf1ba256ae
   - rc_name: rc--2025-09-19_10-17
     versions:
       - name: base
