--- a/.github/workflows/dre-release.yaml
+++ b/.github/workflows/dre-release.yaml
@@ -1,8 +1,8 @@
 name: Release DRE binary
 on:
   push:
-    tags:
-      - "v*"
+    # tags:
+    #   - "v*"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -27,8 +27,55 @@ jobs:
           echo $STAGING_PRIVATE_KEY_PEM > ~/.config/dfx/identity/bootstrap-super-leader/identity.pem
           bazel test //rs/cli:unit_test --spawn_strategy=local --test_env=HOME=/home/runner
 
-  release:
+  build-macos-x86_64:
     needs: [test]
+    runs-on: macos-12
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up Rust toolchain
+        uses: dtolnay/rust-toolchain@master
+
+      - name: Build dre (x86_64-apple-darwin)
+        run: |
+          set -euo pipefail
+          cargo build --release -p dre
+
+      - name: Upload macOS x86_64 artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: dre-x86_64-apple-darwin
+          path: rs/cli/target/release/dre
+          if-no-files-found: error
+
+  build-macos-aarch64:
+    needs: [test]
+    runs-on: macos-14
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up Rust toolchain
+        uses: dtolnay/rust-toolchain@master
+
+      - name: Build dre (aarch64-apple-darwin)
+        run: |
+          set -euo pipefail
+          rustup target add aarch64-apple-darwin
+          cargo build --release -p dre --target aarch64-apple-darwin
+
+      - name: Upload macOS aarch64 artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: dre-aarch64-apple-darwin
+          path: rs/cli/target/aarch64-apple-darwin/release/dre
+          if-no-files-found: error
+
+  release:
+    needs: [test, build-macos-x86, build-macos-arm]
     runs-on:
       labels: dre-runner-custom
     container: ghcr.io/dfinity/dre/actions-runner:6413f2909a49329ecbf5371ee7ddf07a9799b625
@@ -76,17 +123,34 @@ jobs:
       - name: Build artifacts
         shell: bash
         run: |
-          rustup target add x86_64-apple-darwin
-          rustup target add aarch64-apple-darwin
           CARGO_BAZEL_REPIN=true bazel build --config=ci //rs/cli:dre
-          cargo cross-x86
-          cargo cross-aarch
 
           mkdir -p release/artifacts
           cp --dereference bazel-out/k8-opt/bin/rs/cli/dre release/artifacts/dre-x86_64-unknown-linux
-          cp target/x86_64-apple-darwin/release/dre release/artifacts/dre-x86_64-apple-darwin
-          cp target/aarch64-apple-darwin/release/dre release/artifacts/dre-aarch64-apple-darwin
 
+      - name: Download macOS x86_64 artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: dre-x86_64-apple-darwin
+          path: release/artifacts/
+
+      - name: Rename macOS x86_64 artifact
+        shell: bash
+        run: mv release/artifacts/dre release/artifacts/dre-x86_64-apple-darwin
+
+      - name: Download macOS aarch64 artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: dre-aarch64-apple-darwin
+          path: release/artifacts/
+
+      - name: Rename macOS aarch64 artifact
+        shell: bash
+        run: mv release/artifacts/dre release/artifacts/dre-aarch64-apple-darwin
+
+      - name: Generate changelog
+        shell: bash
+        run: |
           git cliff --current --sort newest > release/CHANGELOG.md
 
       - name: "🆕 📢 Prepare release"
