--- a/.github/workflows/dre-release.yaml
+++ b/.github/workflows/dre-release.yaml
@@ -75,7 +75,7 @@ jobs:
           if-no-files-found: error
 
   release:
-    needs: [test, build-macos-x86, build-macos-arm]
+    needs: [test, build-macos-x86_64, build-macos-aarch64]
     runs-on:
       labels: dre-runner-custom
     container: ghcr.io/dfinity/dre/actions-runner:6413f2909a49329ecbf5371ee7ddf07a9799b625
