--- a/.github/workflows/dre-release.yaml
+++ b/.github/workflows/dre-release.yaml
@@ -72,7 +72,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: dre-x86_64-apple-darwin
-          path: rs/cli/target/release/dre
+          path: target/release/dre
           if-no-files-found: error
 
   build-macos-aarch64:
@@ -119,7 +119,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: dre-aarch64-apple-darwin
-          path: rs/cli/target/aarch64-apple-darwin/release/dre
+          path: target/aarch64-apple-darwin/release/dre
           if-no-files-found: error
 
   release:
