--- a/.github/workflows/dre-release.yaml
+++ b/.github/workflows/dre-release.yaml
@@ -29,53 +29,7 @@ jobs:
           echo $STAGING_PRIVATE_KEY_PEM > ~/.config/dfx/identity/bootstrap-super-leader/identity.pem
           bazel test //rs/cli:unit_test --spawn_strategy=local --test_env=HOME=/home/runner
 
-  build-macos-x86_64:
-    needs: [test]
-    runs-on: macos-12
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Determine Rust toolchain from rust-toolchain.toml
-        id: rust
-        run: |
-          set -euo pipefail
-          ver=$(awk -F\" '/^channel =/ {print $2}' rust-toolchain.toml)
-          if [ -z "$ver" ]; then
-            echo "Failed to parse Rust toolchain channel from rust-toolchain.toml" >&2
-            exit 1
-          fi
-          echo "toolchain=$ver" >> "$GITHUB_OUTPUT"
-
-      - name: Set up Rust toolchain
-        uses: dtolnay/rust-toolchain@master
-        with:
-          toolchain: ${{ steps.rust.outputs.toolchain }}
-
-      - name: Install protoc (protobuf) and export env
-        run: |
-          set -euo pipefail
-          brew update
-          brew install protobuf
-          prefix=$(brew --prefix protobuf)
-          echo "PROTOC=$prefix/bin/protoc" >> "$GITHUB_ENV"
-          echo "PROTOC_INCLUDE=$prefix/include" >> "$GITHUB_ENV"
-          "$prefix/bin/protoc" --version
-
-      - name: Build dre (x86_64-apple-darwin)
-        run: |
-          set -euo pipefail
-          cargo build --release -p dre
-
-      - name: Upload macOS x86_64 artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: dre-x86_64-apple-darwin
-          path: target/release/dre
-          if-no-files-found: error
-
-  build-macos-aarch64:
+  build-macos:
     needs: [test]
     runs-on: macos-14
     steps:
@@ -109,10 +63,14 @@ jobs:
           echo "PROTOC_INCLUDE=$prefix/include" >> "$GITHUB_ENV"
           "$prefix/bin/protoc" --version
 
+      - name: Add Rust targets
+        run: |
+          set -euo pipefail
+          rustup target add aarch64-apple-darwin x86_64-apple-darwin
+
       - name: Build dre (aarch64-apple-darwin)
         run: |
           set -euo pipefail
-          rustup target add aarch64-apple-darwin
           cargo build --release -p dre --target aarch64-apple-darwin
 
       - name: Upload macOS aarch64 artifact
@@ -122,8 +80,26 @@ jobs:
           path: target/aarch64-apple-darwin/release/dre
           if-no-files-found: error
 
+      - name: Build dre (x86_64-apple-darwin) via Apple Silicon cross-linker
+        run: |
+          set -euo pipefail
+          export SDKROOT=$(xcrun --sdk macosx --show-sdk-path)
+          export MACOSX_DEPLOYMENT_TARGET=11.0
+          export CC_x86_64_apple_darwin="$(xcrun -f clang)"
+          export CXX_x86_64_apple_darwin="$(xcrun -f clang++)"
+          export CARGO_TARGET_X86_64_APPLE_DARWIN_LINKER="$(xcrun -f clang)"
+          export RUSTFLAGS="-C link-arg=-target -C link-arg=x86_64-apple-macos11.0 ${RUSTFLAGS:-}"
+          cargo build --release -p dre --target x86_64-apple-darwin
+
+      - name: Upload macOS x86_64 artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: dre-x86_64-apple-darwin
+          path: target/x86_64-apple-darwin/release/dre
+          if-no-files-found: error
+
   release:
-    needs: [test, build-macos-x86_64, build-macos-aarch64]
+    needs: [test, build-macos]
     runs-on:
       labels: dre-runner-custom
     container: ghcr.io/dfinity/dre/actions-runner:6413f2909a49329ecbf5371ee7ddf07a9799b625
