--- a/.github/workflows/dre-release.yaml
+++ b/.github/workflows/dre-release.yaml
@@ -31,7 +31,7 @@ jobs:
 
   build-macos:
     needs: [test]
-    runs-on: macos-14
+    runs-on: namespace-profile-darwin # Same as in the IC repo
     steps:
       - uses: actions/checkout@v4
         with:
