--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,7 +25,7 @@ nav:
       - "NNS Proposals": nns-proposals.md
       - "Submitting Motion Proposals": nns-motion-proposals.md
       - "Running Qualification": qualification/running-qualification.md
-      - "Release Controller and Release Notes": ../release-controller/README.md
+      - "Release Controller and Release Notes": release-controller/README.md
       - "Being a DRE": be-dr-dre.md
   - "Development":
       - "Kubernetes":
@@ -33,8 +33,8 @@ nav:
           - "Elastic configuration": k8s/elastic-commands.md
       - "Bazel":
           - "Tips and Tricks": bazel/tips-and-tricks.md
-      - "CLI Tool": ../rs/cli/README.md
-      - "Trusted Neurons Alerts": ../trusted-neurons-alerts/README.md
+      - "CLI Tool": rs/cli/README.md
+      - "Trusted Neurons Alerts": trusted-neurons-alerts/README.md
 
 theme:
   name: material
