--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,26 +20,31 @@ nav:
           - "Overview": trustworthy-metrics/trustworthy-metrics.md
           - "Architecture": trustworthy-metrics/architecture.md
           - "Untrusted Metrics": trustworthy-metrics/untrusted-metrics.md
-  - "Guides":
-      - "Creating a Neuron": create-a-neuron.md
-      - "NNS Proposals": nns-proposals.md
-      - "Submitting Motion Proposals": nns-motion-proposals.md
-      - "Running Qualification": qualification/running-qualification.md
-      - "Release Controller and Release Notes": release-controller/README.md
-      - "Being a DRE": be-dr-dre.md
+  - Guides:
+    - "Creating a Neuron": create-a-neuron.md
+    - "NNS Proposals": nns-proposals.md
+    - "Submitting Motion Proposals": nns-motion-proposals.md
+    - "Running Qualification": qualification/running-qualification.md
+    - "Being a DRE": be-dr-dre.md
+    - "CLI Tool":
+      - rs/cli/README.md
+    - "Trusted Neurons Alerts":
+      - trusted-neurons-alerts/README.md
+    - "IC Release Controller and Release Notes":
+      - release-controller/README.md
   - "Development":
       - "Kubernetes":
           - "Tips and Tricks": k8s/tips-and-tricks.md
           - "Elastic configuration": k8s/elastic-commands.md
       - "Bazel":
           - "Tips and Tricks": bazel/tips-and-tricks.md
-      - "CLI Tool": rs/cli/README.md
-      - "Trusted Neurons Alerts": trusted-neurons-alerts/README.md
 
 theme:
   name: material
   features:
     - navigation.instant
+    - navigation.instant.prefetch
+    - navigation.instant.progress
     - navigation.tracking
     - navigation.tabs
     - navigation.sections
