--- a/release-index.yaml
+++ b/release-index.yaml
@@ -8,6 +8,10 @@
 #         rc_name: <reference RC name>
 #         name: <version name>
 releases:
+  - rc_name: rc--2025-10-09_03-15
+    versions:
+      - name: base
+        version: 285897dae3a2cb60c50d9d8dd7327f18c3c372b9
   - rc_name: rc--2025-10-02_03-13
     versions:
       - name: base
