--- a/rs/cli/Cargo.toml
+++ b/rs/cli/Cargo.toml
@@ -82,9 +82,13 @@ tabular = { workspace = true }
 tempfile = { workspace = true }
 tokio = { workspace = true }
 url = { workspace = true }
+hex = { workspace = true }
+ic-registry-common-proto = { workspace = true }
+base64 = { version = "0.22" }
 
 [dev-dependencies]
 actix-rt = { workspace = true }
+serial_test = "2.0"
 
 [build-dependencies]
 clap = { workspace = true }
