--- a/release-index.yaml
+++ b/release-index.yaml
@@ -12,6 +12,8 @@ releases:
     versions:
       - name: base
         version: 286295f0397521cd59ca7792df446c57379204fa
+      - name: sev-prep
+        version: 575bcd0954e9d00066fd465223b755bda645edd6
   - rc_name: rc--2025-10-09_03-15
     versions:
       - name: base
