--- a/release-controller/BUILD.bazel
+++ b/release-controller/BUILD.bazel
@@ -146,7 +146,7 @@ py_library (
 py_library (
     name = "forum",
     data = [],
-    srcs = ["forum.py"],
+    srcs = ["forum.py", "cached_discourse.py"],
     deps = ["release_index", "reconciler_state", "util"] + [
         requirement("pydiscourse"),
         requirement("python-dotenv"),
