--- a/rs/slack-notifications/conf/neurons-slack-mapping.yaml
+++ b/rs/slack-notifications/conf/neurons-slack-mapping.yaml
@@ -7,8 +7,8 @@
   slack_id: UKJUP3G3X # Juliana Che
 - neuron_id: 34
   slack_id: UD5JPLYAH # Andrea Cerulli
-- neuron_id: 35
-  slack_id: USYLCFLCS # Bartosz Przydatek
+#- neuron_id: 35
+#  slack_id: 
 - neuron_id: 36
   slack_id: UGN5F0F7B # Max Murphy
 - neuron_id: 37
@@ -41,8 +41,8 @@
   slack_id: USJPEC5F0 # Islam El-Ashi
 - neuron_id: 51
   slack_id: U02RFGQHP47 # Daniel Wong
-- neuron_id: 52
-  slack_id: U02PX4CKLPJ # Maksims Strasinskis
+#- neuron_id: 52
+#  slack_id:
 - neuron_id: 53
   slack_id: U01GTFM9FUJ # Alexandra Zapuc
 - neuron_id: 54
@@ -79,8 +79,8 @@
   slack_id: UK6PJFR9A # Nicolas Mattia
 - neuron_id: 70
   slack_id: UFWTXMBB2 # Bas van Dijk
-- neuron_id: 71
-  slack_id: U01Q0ED6SDB # Leon Tan
+#- neuron_id: 71
+#  slack_id: 
 - neuron_id: 72
   slack_id: U0574S1N1BP # Jason Zhu
 - neuron_id: 73
