--- a/rs/ic-canisters/Cargo.toml
+++ b/rs/ic-canisters/Cargo.toml
@@ -42,3 +42,5 @@ ic-interfaces-registry.workspace = true
 ic-registry-nns-data-provider.workspace = true
 ic-registry-canister-api = { workspace = true }
 icrc-ledger-types.workspace = true
+ic-node-rewards-canister-api = { workspace = true }
+rewards-calculation = { workspace = true }
