--- a/Cargo.toml
+++ b/Cargo.toml
@@ -96,52 +96,52 @@ self_update = { version = "0.41.0", default-features = false, features = [
     "archive-tar",
     "rustls",
 ] }
-ic-base-types = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-canister-client = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-canister-client-sender = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
+ic-base-types = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-canister-client = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-canister-client-sender = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
 ic-canisters = { path = "rs/ic-canisters" }
-ic-http-types = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-config = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-crypto-utils-threshold-sig-der = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-dummy-getrandom-for-wasm = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-http-endpoints-metrics = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-interfaces-registry = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
+ic-http-types = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-config = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-crypto-utils-threshold-sig-der = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-dummy-getrandom-for-wasm = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-http-endpoints-metrics = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-interfaces-registry = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
 ic-management-backend = { path = "rs/ic-management-backend" }
-ic-management-canister-types-private = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
+ic-management-canister-types-private = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
 ic-management-types = { path = "rs/ic-management-types" }
-ic-metrics = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-nervous-system-canisters = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-nervous-system-common = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-nervous-system-runtime = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-nns-common = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-nns-constants = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-nns-governance = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-nns-governance-api = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-protobuf = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-registry-canister-client = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-registry-canister-api = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-registry-client = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-registry-client-fake = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-registry-client-helpers = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-registry-common-proto = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-registry-keys = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-registry-local-registry = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-registry-local-store = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-registry-local-store-artifacts = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-registry-nns-data-provider = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-registry-subnet-type = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-registry-transport = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-sys = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-types = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-nervous-system-root = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-nervous-system-clients = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-nervous-system-proto = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-sns-wasm = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-cycles-minting-canister = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-ic-icrc1-test-utils = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-rosetta-core = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-icp-ledger = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
-icrc-ledger-types = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
+ic-metrics = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-nervous-system-canisters = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-nervous-system-common = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-nervous-system-runtime = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-nns-common = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-nns-constants = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-nns-governance = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-nns-governance-api = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-protobuf = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-registry-canister-client = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-registry-canister-api = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-registry-client = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-registry-client-fake = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-registry-client-helpers = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-registry-common-proto = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-registry-keys = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-registry-local-registry = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-registry-local-store = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-registry-local-store-artifacts = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-registry-nns-data-provider = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-registry-subnet-type = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-registry-transport = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-sys = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-types = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-nervous-system-root = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-nervous-system-clients = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-nervous-system-proto = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-sns-wasm = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+cycles-minting-canister = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+ic-icrc1-test-utils = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+rosetta-core = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+icp-ledger = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
+icrc-ledger-types = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
 ic-metrics-encoder = "1.1.1"
 ic-transport-types = "0.39.3"
 ic-utils = "0.39.3"
@@ -167,7 +167,7 @@ prost = "0.13"
 rand = { version = "0.9.2", features = ["std_rng"] }
 rand_seeder = "0.3.0"
 regex = "1.11.2"
-registry-canister = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
+registry-canister = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
 reqwest = { version = "0.12", default-features = false, features = [
     "rustls-tls-webpki-roots",
     "blocking",
@@ -196,6 +196,7 @@ spinners = "4.1.1"
 strum = { version = "0.26.3", features = ["derive"] }
 strum_macros = "0.26.4"
 tabled = "0.18.0"
+csv_to_table = "0.3"
 tabular = "0.2"
 tempfile = "3.22.0"
 thiserror = "2.0.16"
@@ -205,16 +206,17 @@ url = "2.5.7"
 wiremock = "=0.6.4"
 human_bytes = "0.4"
 mockall = "0.13.1"
+csv = "1.3.1"
 
 # dre-canisters dependencies
 ic-cdk = { version = "^0.18.7" }
 ic-cdk-timers = { version = "^0.12.2" }
 ic-cdk-macros = { version = "^0.18.7" }
 ic-stable-structures = "0.6.9"
-dfn_core = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
+dfn_core = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
 rewards-calculation = { path = "rs/dre-canisters/node-provider-rewards/rewards-calculation" }
 node-provider-rewards-api = { path = "rs/dre-canisters/node-provider-rewards/canister/api" }
-ic-node-rewards-canister-api = { git = "https://github.com/dfinity/ic.git", rev = "44e6a4830a03f05101a33d7baeb1f92c5c8093bc" }
+ic-node-rewards-canister-api = { git = "https://github.com/dfinity/ic.git", rev = "4a3a69eb515d0d69022de9afad7cbf143ca03a9c" }
 
 # dre-airflow deps, should be replaced with dre-airflow once
 indexmap = { version = "2.11.1", features = ["serde"] }
