Add influx push

--- a/rs/cli/Cargo.toml
+++ b/rs/cli/Cargo.toml
@@ -90,6 +90,8 @@ url = { workspace = true }
 hex = { workspace = true }
 ic-registry-common-proto = { workspace = true }
 base64 = { version = "0.22" }
+influxdb2 = "0.5"
+influxdb2-structmap = "0.2"
 
 [dev-dependencies]
 actix-rt = { workspace = true }
