--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ dependencies = [
     "mypy==1.16.1",
     "prometheus-client>=0.21.1",
     "filelock==3.18.0",
+    "codeowners>=0.8.0",
 ]
 
 [tool.rye]
