--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -152,6 +152,20 @@ http_file(
 
 http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
 
+http_archive(
+    name = "codeowners_linux",
+    sha256 = "94f9f9ec43dba151816b5c2fd98698afbfd03d5ac63db77d2d8c2cf77b326bb0",
+    url = "https://github.com/hmarr/codeowners/releases/download/v1.2.1/codeowners_1.2.1_linux_amd64.tar.gz",
+    build_file = "@//3rdparty:BUILD.codeowners.bazel",
+)
+
+http_archive(
+    name = "codeowners_darwin",
+    sha256 = "39d5868f50a3716af61c1bd4722b9f840f07a005d3018b20483de26b10ced19a",
+    url = "https://github.com/hmarr/codeowners/releases/download/v1.2.1/codeowners_1.2.1_darwin_amd64.tar.gz",
+    build_file = "@//3rdparty:BUILD.codeowners.bazel",
+)
+
 IC_REPO_VERSION = "b7da3ffe9d2d749012cbc18e530183d84ceff660"
 
 http_archive(
