wip: first version of a diff, calling latest to sync entire registry

--- a/rs/cli/Cargo.toml
+++ b/rs/cli/Cargo.toml
@@ -90,6 +90,7 @@ url = { workspace = true }
 hex = { workspace = true }
 ic-registry-common-proto = { workspace = true }
 base64 = { version = "0.22" }
+similar = "2.7.0"
 
 [dev-dependencies]
 actix-rt = { workspace = true }
